# pygiggle

./: .pylintrc  README.md  docker-compose.yml  requirements-static-analysis.txt  setup.cfg  tox.ini
src/pygiggle/hackerrank/: alphabet_rangoli.py  compress_string.py  iterables_probability.py  maximize_it.py  validate_email.py  write_function_is_leap.py
src/pygiggle/hackerrank/test/: test_alphabet_rangoli.py  test_compress_string.py  test_iterables_probability.py  test_maximize_it.py  test_validate_email.py  test_write_function_is_leap.py
