[metadata]
name = pygiggle
version = 0.0.0
summary = Python Experiments
description-file = README.md
author = mig4
author-email = 42101611+mig4@users.noreply.github.com
home-page = https://github.com/mig4/pygiggle
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Education

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[wheel]
universal = 1
